# resos

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: framework_example.rs
proto/: Cargo.toml  generate_rs.sh
proto/proto/: messages.proto
proto/proto/mesos/: mesos.proto
proto/src/: executor.rs  internal.rs  lib.rs  mesos.rs  proto.rs  scheduler.rs
resources/proto/: mesos.proto  messages.proto
src/: executor.rs  executor_driver.rs  http.rs  http_api.rs  lib.rs  libprocess.rs  master_detector.rs  mesos-c-api.h  mesos.rs  native.rs  proto.rs  scheduler.rs  scheduler_driver.rs  utils.rs
