[package]
name = "mesos"
version = "0.0.1"
authors = ["Connor Doyle <connor@mesosphere.io>",
           "Nandor Kracser <bonifaido@gmail.com>"]

[dependencies]
hyper = "0.6"
lazy_static = "0.1"
log = "0.3"
rustc-serialize = "0.3"
time = "0.1"
uuid = "0.1"

[dependencies.proto]
path = "proto"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.zookeeper]
git = "https://github.com/bonifaido/rust-zookeeper.git"

[dev-dependencies]
env_logger = "0.3"
