[package]
name = "mesos"
version = "0.0.1"
authors = ["Connor Doyle <connor@mesosphere.io>",
           "Nandor Kracser <bonifaido@gmail.com>"]

[dependencies]
lazy_static = "0.1"
log = "0.3"
protobuf = "1.0"
rustc-serialize = "0.3"
zookeeper = "0.2"

# to disable openssl for now
[dependencies.hyper]
version = "0.7"
default-features = false

[dependencies.proto]
path = "proto"

[dev-dependencies]
env_logger = "0.3"
time = "0.1"
uuid = "0.1"
